# drone-lane-tracking

./: .gitignore  README.md  config.py  px4_config.yaml  read_camera_windows11.py  tools.py
analysis/: drone_trajectory.py  video_test.py
customModule/: DQLL.py
customModule/yolox/: yolox_config.py
customModule/yolox/data/: data_augment.py
lidar_ws/datmo/: CMakeLists.txt  package.xml
lidar_ws/datmo_msg/: package.xml
lidar_ws/python_test/: package.xml  setup.py
ros_ws/customModule/: DQLL.py  DRL_model.py  DRL_model_b.py  base_model.py  config.py  reward.py  utils_dqll.py
src/auto_drone/: package.xml  setup.cfg  setup.py
src/auto_drone/auto_drone/: camera_node.py  cmd_drive.py  cmd_drive_auto.py  cmd_drive_termination.py  cmd_land.py  cmd_record.py  cmd_takeoff.py  control_direction_node.py  detection_node.py  node_camera.py  node_camera1_airsim.py  node_camera2_airsim.py  node_control_direction.py  node_control_main.py  node_control_velocity.py  node_controller_main.py  node_controller_main_dronekit.py  node_controllerp_main.py  node_detection_line.py  node_detection_runner.py  node_record_video.py  send_velocity.py  send_velocity_circle.py  send_velocity_dronekit.py
src/auto_drone/launch/: auto_drone_airsim_launch.py  auto_drone_airsim_launch_rule.py  auto_drone_airsim_rule_circle_launch.py  auto_drone_airsim_rule_launch.py  auto_drone_launch.py  auto_drone_launch_rule.py  auto_drone_rule_circle_launch.py  auto_drone_rule_dronekit_launch.py  auto_drone_rule_launch.py
src/custom_message/: CMakeLists.txt  __init__.py  package.xml
src/custom_message/msg/: LandmarkCloud.msg  TargetPolyInfo.msg
src/datmo_msg/: CMakeLists.txt
src/model_linedet/: CMakeLists.txt  DQLL.py  DRL_model.py  package.xml
src/utils/: tools.py
(+69 files in other folders)
