<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_drone</name>
  <version>0.0.0</version>
  <description>Example ROS 2 package launch for dual camera nodes</description>
  <maintainer email="jaewhoon_cho@957.co.kr">cto2</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>mavros</depend>
  <depend>mavros_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>custom_message</depend>
  
  <exec_depend>cv_bridge</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

