<?xml version="1.0"?>
<package format="3">
  <name>custom_message</name>
  <version>0.0.1</version>
  <description>A custom message package for handling multiple PointClouds.</description>

  <maintainer email="jaewhoon_cho@957.co.kr">Jaewhoon Cho</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
